--- a/Calls/Call_for_Tutorials.html
+++ b/Calls/Call_for_Tutorials.html
@@ -40,6 +40,7 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="../index.html">Home</a></li>
+                    <li class="menu-active"><a href="../about.html">About</a></li>
                     <li class="menu-has-children"><a href="">Calls</a>
                         <ul>
                             <li><a href="Call_for_Research_Papers.html">Call for Research Papers</a></li>
